src/Board.css
.bigboard {
  display: flex;
  width: fit-content;
  height: 100%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 5px solid #daa520;
  border-image: url("https://cdn.shopify.com/s/files/1/2123/8425/products/25999303-LRG_b5f2ac6c-a9c1-4573-9cf8-9320fcc6ff80_530x.jpg?v=1580392522")
    30 round;
}
.bigboard-container {
  display: flex;
  flex-direction: column;
  width: 90%;
}
.row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  height: 100%;
}
.button-container {
  margin-top: 1%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.title {
  color: white;
  font-family: "Jumble", sans-serif;
  font-weight: 400;
  font-size: 300%;
  margin-bottom: 40px;
  margin-top: 5px;
  display: flex;
  justify-content: center;
}
.bigboard-container:after {
  display: block;
}

